# -

./: FINAL_real_data_pipeline_nar_gpu_v2_checked_final_merged.ipynb  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  robustness_test.py  run.py  setup.py
configs/: cosmx_nsclc.yaml  cosmx_nsclc_lung9_tar.yaml  default.yaml  real_crc_config_main_claim_st_only.yaml  real_crc_config_nar_gpu_v2.yaml  visium_hd.yaml  visium_hd_10x_crc.yaml  visium_hd_10x_crc_autodetect.yaml  visium_hd_crc_16um.yaml  visium_hd_crc_16um_cpu5h.yaml  visium_hd_crc_16um_cpu_quick.yaml  visium_hd_crc_16um_nar_cpu.yaml  visium_hd_crc_16um_nar_gpu.yaml  visium_hd_crc_8um.yaml
phycausal_stgrn/: cli.py  config.py  logging_utils.py  seed.py
phycausal_stgrn/baselines/: celcomen_runner.py  spagrn_runner.py
phycausal_stgrn/data/: __init__.py  cosmx_loader.py  cosmx_tar_loader.py  data_loader.py  sdata_utils.py  visiumhd_10x_loader.py  visiumhd_crc_loader.py  visiumhd_loader.py
phycausal_stgrn/engine/: ot_alignment.py  trainer.py
phycausal_stgrn/grn/: infer_edges.py
phycausal_stgrn/models/: PhyCausal_ODE.py  layers.py
phycausal_stgrn/scripts/: evaluate.py  export_edges_entry.py  paper_figures.py  rebuild_main_claim_summaries.py  robustness_entry.py  train_entry.py
phycausal_stgrn/utils/: committor_flux.py  diagnostics.py  edge_eval.py  gold_sanity.py  grn_labels.py  metrics.py  roi.py
phycausal_stgrn/viz/: diagnostic_figures.py
runs/: real_crc_config_main_claim_st_only.yaml  real_crc_config_nar_gpu_v2.yaml
runs/preprocessed/: real_crc_config.resolved.yaml  (+4 more)
(+1 files in other folders)
