[project]
name = "phycausal-stgrn"
version = "0.1.0"
description = "Physics-enhanced causal Neural ODE for spatial transcriptomics GRN dynamics with OT alignment."
requires-python = ">=3.9"
authors = [{name="Heath Sherlock"}]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "basic"
